Wed Jul 19 19:08:46 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added lib/contrib directory to hold routines that some platforms
	  don't have but are needed by SILC.

	* Added getopt.c, getopt1.c and getopt.h from GNU C library
	  into lin/contrib to provide getopt() and getopt_long() for
	  those who don't have it.

Tue Jul 18 20:41:20 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added AWAY command to client.  When away message is set and
	  client receives a private message packet the client automatically
	  replies to the sender with the away message.

	* Fixed a bug in lib/silcmath/mpbin.c: silc_mp_mp2bin.  This
	  bug seemed to be the cause of recent problems when compiling
	  with gcc-2.95.

	* Added version detection support to SKE protocol specification
	  and added the new changes to the SKE implementation as well.
	  There were other minor changes in the SKE protocol as well.

	  Many changes in lib/silcske/silcske.[ch] and in
	  lib/silcske/payload.[ch].

	* Added ^U functionality, clear input line.  Patch from cras.

Mon Jul 17 23:33:26 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Mainly small bugfixes on core library.  Fixed some debugging
	  logging and buffer overflow in silclog.c.

	* Updated config.sub and config.guess on the distribution tree.

Sat Jul 15 15:33:48 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added command lagging support in server. Client may execute
	  commands now only once in two seconds.

Thu Jul 13 22:10:21 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Optimized packet reception. MAC computation and checking is now
	  also more optimized.  A lot previously duplicated code is now
	  used as generic by both client and server.

	* Fixed key pair generation in clientutil.c

Wed Jul 12 18:28:07 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added into lib/silccore/silcbufutil.[ch] new function;
	  silc_buffer_realloc.
